@@ -1,3 +1,8 @@
+2004-01-20 Sivaiah Nallagatla <snallagatla@novell.com>
+
+	* mime-edit-dialog.c (mime_add_dialog_new ) : do not try to set
+	construct only property after object is constructed. Fixes #128374
+	
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
